bug fixes/minor improvements
-removed redundant code in css file
-increased speed of chat messages being 'typed'
-fixed chat bubbles expanding too far from long text messages

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -17,33 +17,3 @@
 }
 
 
-/* Style for messages sent by right side bot */
-.right-message {
-  background-color: #007BFF; /* Colours can be adjusted to ui/ux */
-  color: white;
-  text-align: right;
-  padding: 8px 16px;
-  border-radius: 20px;
-  margin: 8px 0;
-  display: flex; 
-  width:auto;
-  min-width: 20%;
-  max-width: 20%; /* Adjust as needed */
-  margin-left: auto; 
-  word-wrap: break-word; 
-}
-
-/* Style for messages received from left side bot */
-.left-message {
-  background-color: #E5E5EA; /* Colours can be adjusted to ui/ux  */
-  color: black;
-  text-align: left;
-  padding: 8px 16px;
-  border-radius: 20px;
-  margin: 8px 0;
-  display: flex; 
-  min-width: 20%;
-  max-width: 40%; /* Adjust as needed */
-  margin-right: auto; 
-  word-wrap: break-word; 
-}
